KRaft dead