@@ -1,51 +1,65 @@
 package ru.ya.analytic.config;
 
-import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.admin.AdminClient;
+import org.apache.kafka.clients.admin.NewTopic;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.kafka.core.KafkaAdmin;
-import org.springframework.stereotype.Component;
 
+import jakarta.annotation.PostConstruct;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
-@Component
+@Configuration
 @RequiredArgsConstructor
 @Slf4j
 public class KafkaTopicChecker {
 
     private final KafkaAdmin kafkaAdmin;
 
-    @Value("${app.kafka.topics}")
-    private List<String> requiredTopics;
+    @Value("${kafka.topic.requested}")
+    private String requestedTopic;
 
-    private final long checkIntervalMs = 10_000; // 15 секунд
+    @Value("${kafka.topic.referred}")
+    private String referredTopic;
+
+    private final long checkIntervalMs = 5000; // 5 секунд
 
     @PostConstruct
     public void waitForTopics() throws InterruptedException {
-        boolean topicsExist = false;
+        boolean topicsReady = false;
 
-        while (!topicsExist) {
+        while (!topicsReady) {
             try (AdminClient adminClient = AdminClient.create(kafkaAdmin.getConfigurationProperties())) {
                 Set<String> existingTopics = adminClient.listTopics().names().get();
-                List<String> missingTopics = requiredTopics.stream()
+                List<String> missing = List.of(requestedTopic, referredTopic).stream()
                         .filter(t -> !existingTopics.contains(t))
-                        .toList();
+                        .collect(Collectors.toList());
 
-                if (missingTopics.isEmpty()) {
-                    topicsExist = true;
-                    log.info("All required Kafka topics are available: {}", requiredTopics);
+                if (missing.isEmpty()) {
+                    topicsReady = true;
+                    log.info("All required Kafka topics exist: {}", List.of(requestedTopic, referredTopic));
                 } else {
-                    log.warn("Waiting for Kafka topics: {}", missingTopics);
-                    Thread.sleep(checkIntervalMs);
+                    // Создаём недостающие
+                    missing.forEach(t -> {
+                        try {
+                            adminClient.createTopics(List.of(new NewTopic(t, 1, (short)1))).all().get();
+                            log.info("Created missing topic: {}", t);
+                        } catch (Exception e) {
+                            log.error("Failed to create topic: {}", t, e);
+                        }
+                    });
+                    log.info("Waiting for Kafka topics to be available: {}", missing);
+                    TimeUnit.MILLISECONDS.sleep(checkIntervalMs);
                 }
             } catch (Exception e) {
                 log.error("Error checking Kafka topics, retrying in {} ms", checkIntervalMs, e);
-                Thread.sleep(checkIntervalMs);
+                TimeUnit.MILLISECONDS.sleep(checkIntervalMs);
             }
         }
     }
 }
-
